...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBreweryDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbDetails"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/yellow_home"
...
            android:layout_height="wrap_content"
            android:src="@drawable/ic_color_back"
            android:background="@color/yellow_icon"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ibLikeDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart"
            android:layout_gravity="end"
            android:background="@color/yellow_icon"
            android:layout_marginEnd="16dp"
...
                app:layout_constraintBottom_toBottomOf="@+id/tvAvaliationDetails"
                app:layout_constraintEnd_toStartOf="@+id/tvAvaliationDetails"
                app:layout_constraintTop_toTopOf="@+id/tvAvaliationDetails"
                tools:text="+500" />

            <RatingBar
                android:id="@+id/ratingBarDetails"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="13dp"
                android:progressTint="@color/yellow_rating"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mdPlace"
                tools:ignore="ContentDescription"
                />

            <TextView
                android:id="@+id/tvMapDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/ver_no_mapa"
                android:textColor="@color/brewery_black"
...
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_recycleview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbAvaliation"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow_rating"
                android:layout_marginTop="8dp"
                android:text="@string/avaliar"
                android:textColor="@color/gold"
...
