...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBarDetails"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
...
        android:text="@string/remember_email"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/checkbox_email"
        app:layout_constraintTop_toBottomOf="@id/til_breweryEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/yellow_rating"
        android:fontFamily="@font/roboto_medium"
...
